WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250501
[UI-side compositing] alert() causes entire page contents to disappear
https://bugs.webkit.org/show_bug.cgi?id=250501
Summary
[UI-side compositing] alert() causes entire page contents to disappear
Simon Fraser (smfr)
Reported
2023-01-11 22:36:37 PST
Created
attachment 464466
[details]
Simple test Summary: If a page triggers a JavaScript dialog (alert, confirm etc), then the entire page contents go missing. Steps To Reproduce: 1. Start a GitHub review (I was on
https://github.com/WebKit/WebKit/pull/8277/files
) 2. Add a pending comment 3. Try to remove the comment Results: When the alert shows up, the page contents disappear and don’t come back until you do a cross-origin navigation. Regression: Regression with UI-side compositing.
Attachments
Simple test
(292 bytes, text/html)
2023-01-11 22:36 PST
,
Simon Fraser (smfr)
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2023-01-11 22:36:51 PST
rdar://104139106
Simon Fraser (smfr)
Comment 2
2023-01-11 22:41:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8560
EWS
Comment 3
2023-01-12 13:41:55 PST
Committed
258849@main
(f40a2f336eae): <
https://commits.webkit.org/258849@main
> Reviewed commits have been landed. Closing PR #8560 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug