[UI-side compositing] alert() causes entire page contents to disappear https://bugs.webkit.org/show_bug.cgi?id=250501 rdar://104139106

Reviewed by Chris Dumez.

When a JavaScript alert/prompt/confirm dialog is shown, `WebPageProxy::makeViewBlankIfUnpaintedSinceLastLoadCommit()`
is called (see 236143@main). This consults `m_hasUpdatedRenderingAfterDidCommitLoad`, but that was always false
with UI-side compositing on macOS, because it relied on code in `WebPageProxy::didCommitLayerTree()` which
was iOS only.

So make `WebPageProxy::didCommitLayerTree()` shared between macOS and iOS, and add some PageClient stubs for
macOS.

* Source/WebKit/UIProcess/Cocoa/WebPageProxyCocoa.mm:
(WebKit::exceedsRenderTreeSizeSizeThreshold):
(WebKit::WebPageProxy::didCommitLayerTree):
(WebKit::WebPageProxy::layerTreeCommitComplete):
* Source/WebKit/UIProcess/PageClient.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didCommitLoadForFrame):
(WebKit::WebPageProxy::resetState):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::exceedsRenderTreeSizeSizeThreshold): Deleted.
(WebKit::WebPageProxy::didCommitLayerTree): Deleted.
(WebKit::WebPageProxy::layerTreeCommitComplete): Deleted.
* Source/WebKit/UIProcess/mac/PageClientImplMac.h:
* Source/WebKit/UIProcess/mac/PageClientImplMac.mm:
(WebKit::PageClientImpl::didCommitLayerTree):
(WebKit::PageClientImpl::layerTreeCommitComplete):

Canonical link: https://commits.webkit.org/258849@main